--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
           Fabrication is peformed by our AWS certified welders and inpsected by
           an independent AWS certified welding inspector upon completion.
         </p>
-        <button>More Information</button>
+        <button><a href = "products-services.html">More Information</a></button>
       </div>
       <div  class="card">
         <h3>INSTALLATION &#9874;</h3>
@@ -51,7 +51,7 @@
           most all vertical applications. We provide construction services fomr
           the initial foundations to the final installation of antennas.
         </p>
-          <button>More Information</button>
+          <button><a href = "products-services.html">More Information</a></button>
        
       </div>
       <div class="card tower-services">
@@ -65,7 +65,7 @@
             <h4>... and more</h4>
           </ul>
         </p>
-        <button>More Information</button>
+        <button><a href = "products-services.html">More Information</a></button>
       </div>
     </div>
       
