--- a/public/products-services.html
+++ b/public/products-services.html
@@ -10,32 +10,181 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&family=Paytone+One&family=Playfair+Display:ital@1&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <link rel = "icon" type = "image/x-icon" href = "images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <script defer src="./browser-app.js"></script>
   </head>
   <body class="products-body">
-    <header class = "products-header">
-          <nav>
-          <a href="index.html">Home</a>
-          <a href="history.html">History</a>
-          <a href ="warranty.html">Warranty</a>
-          <a href="contact.html">Contact</a>
-        </nav>
+    <header>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="history.html">History</a>
+        <a href="warranty.html">Warranty</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </header>
-    <div class="product-section one">
-      <img src="images/design-engineering-min.png" />
-        <a>Design & Engineering</a>
+    <div class="welcome">
+      <h1><img src="images/magnum-logo-min.png" /> Magnum Towers</h1>
+      <h2>From Design to Installation</h2>
+      <p>
+        When you ask Magnum to design your tower, you can be confident in its
+        quality. Every tower manufactured by Magnum is uniquely engineered for
+        our client's specification applications and needs.
+      </p>
+    </div>
+    <div class="products-main">
+      <div class="products-row one">
+        <div class="products-card">
+          <img src="images/welding-min.png" />
+          <a class="drop-down-link" dataset="fabrication">Fabrication</a>
+        </div>
+        <div class="products-card">
+          <img src="images/installation-min.png" />
+          <a class="drop-down-link" dataset="installation">Installation</a>
+        </div>
+        <div class="products-card">
+          <img src="images/services-min.png" />
+          <a class="drop-down-link" dataset="services">Services</a>
+        </div>
+        <div class="products-card">
+          <img src="images/accessories-min.png" />
+          <a class="drop-down-link" dataset="accessories">Accessories</a>
+        </div>
       </div>
-    <div class="product-section two">
-      <img src="images/welding-min.png" />
-        <a>Fabrication</a>
-      </div>
-    <div class="product-section three">
-      <img src="images/installation-min.png" />
-        <a>Installation</a>
-      </div> 
-
-      </div>
+      <div class="product-row two">
+        <div class="drop-down-menu hidden" id="fabrication">
+          <p class="product-paragraph">
+            At Magnum we use 360 degree welds on all of our towers. All of our
+            welders are AWS certified. Each tower is supervised during
+            production and inspected by an independent AWS certified welding
+            inspector upon completion. Thick parts are pre-heated prior to
+            welding to prevent laminar tearing and minimize weld shrinkage
+            stress. Tower sections are very precisely fabricated with the use of
+            specially designed fit-up jigs to insure that tower member assembly
+            is plumb, square, and true to line. We fabricate a diverse variety
+            of steel, aluminum, and magnesium structures and structural
+            components. We are often asked to be creative in bringing a client's
+            vision into reality. Magnum can provide antenna mounts, roof top
+            tower support frameworks, OSHA approved climbing ladders, gin poles
+            (steel or magnesium) waveguide support brackets, and much more.
+          </p>
+          <button class="menu-button button-fabrication hidden-button">
+            Close
+          </button>
+        </div>
+        <div class="drop-down-menu hidden" id="installation">
+          <p class="product-paragraph">
+            When the time comes to install your tower, you can count on us. Your
+            tower will be put up smoothly and safely. We stand by our reputation
+            of installing towers and antennas on time, the first time. Our crews
+            are equipped and ready. Our company specializes in complete tower
+            and antenna installations for most all vertical applications. We
+            provide construction services related to tower installations from
+            the initial foundations to the final installation of antennas. We
+            have the knowledge, reliability, and -- most importantly -- the
+            experience to perform your tower needs.
+          </p>
+           <div class="menu-cell">
+            <img
+              src="images/newtowerinstall.png"
+              class="installation product-image hidden" 
+            />
+            </div>
+            
+            <ul>
+              <h2>New Tower Installations</h2>
+              <li>Tower Mapping</li>
+              <li>Guyed towers, self supporting towers, monpoles</li>
+              <li>Gin pole, crane, and helicopter installations</li>
+              <li>Met towers with wind instrumentation and data loggers</li>
+              <li>Complete Am installations</li>
+              <li>FM, TV, and communication towers</li>
+              <li>Cellular poles</li>
+              <li>Antenna and dish installations</li>
+              <li>Ice Shields</li>
+              <li>Standard and high intensity lighting systems</li>
+            </ul>
+          <button class="menu-button button-installation hidden-button">
+            Close
+          </button>
+        </div>
+        <div class="drop-down-menu hidden" id="services">
+          <p class="product-paragraph">
+            When the time comes to install your tower, you can count on us. Your
+            tower will be put up smoothly and safely. We stand by our reputation
+            of installing towers and antennas on time, the first time. Our crews
+            are equipped and ready. Our company specializes in complete tower
+            and antenna installations for most all vertical applications. We
+            provide construction services related to tower installations from
+            the initial foundations to the final installation of antennas. We
+            have the knowledge, reliability, and -- most importantly -- the
+            experience to perform your tower needs.
+          </p>
+          <ul>
+            <h2>Existing Tower Services</h2>
+            <li>Tower painting/galvanizing
+              We provide a variety of finishes, including FAA approved tower white and tower orange paint, hot-dip galvanized, or custom epoxy paint finishes (military applications).
+            </li>
+            <li>Plumb and tension</li>
+            <li>Tower, antenna, and feedline inspections</li>
+            <li>Lighting protection</li>
+            <li>Guy wire change outs</li>
+            <li>Tower modifications</li>
+            <li>Bracing upgrades</li>
+            <li>Tower removal and demolition</li>
+            <li>Grounding and tower bonding</li>
+            <li>Transmission lines</li>
+          </ul>
+          <button class="menu-button button-services hidden-button">
+            Close
+          </button>
+        </div>
+        <div class="drop-down-menu hidden" id="accessories">
+          <div class="menu-cell">
+            <img
+              src="images/safetyclimbs.png"
+              class="accessories product-image hidden"
+            />
+            <h3>Safety Climbs</h3>
+          </div>
+          <div class="menu-cell">
+            <img
+              src="images/anti-climb.png"
+              class="accessories product-image hidden"
+            />
+            <h3>Anti-Climb Device</h3>
+          </div>
+          <div class="menu-cell">
+            <img
+              src="images/icebridge.png"
+              class="accessories product-image hidden"
+            />
+            <h3>Icebridge</h3>
+          </div>
+          <div class="menu-cell">
+            <img
+              src="images/antennamounts.png"
+              class="accessories product-image hidden"
+            />
+            <h3>Antenna Mounts</h3>
+          </div>
+          <div class="menu-cell">
+            <img
+              src="images/guyinghardware.png"
+              class="accessories product-image hidden"
+            />
+            <h3>Guying Hardware</h3>
+          </div>
+          <div class="menu-cell">
+            <img
+              src="images/insulators.png"
+              class="accessories product-image hidden"
+            />
+            <h3>Insulators</h3>
+          </div>
+          <button class="menu-button button-accessories hidden-button">
+            Close
+          </button>
+        </div>
     </div>
   </body>
 </html>
