--- a/public/products-services.html
+++ b/public/products-services.html
@@ -50,7 +50,7 @@
           <a class="drop-down-link" dataset="accessories">Accessories</a>
         </div>
       </div>
-      <div class="product-row two">
+      <div class="products-row two">
         <div class="drop-down-menu hidden" id="fabrication">
           <p class="product-paragraph">
             At Magnum we use 360 degree welds on all of our towers. All of our
@@ -83,13 +83,6 @@
             have the knowledge, reliability, and -- most importantly -- the
             experience to perform your tower needs.
           </p>
-           <div class="menu-cell">
-            <img
-              src="images/newtowerinstall.png"
-              class="installation product-image hidden" 
-            />
-            </div>
-            
             <ul>
               <h2>New Tower Installations</h2>
               <li>Tower Mapping</li>
@@ -103,6 +96,12 @@
               <li>Ice Shields</li>
               <li>Standard and high intensity lighting systems</li>
             </ul>
+            <div class="menu-cell">
+            <img
+              src="images/newtowerinstall-min.png"
+              class="installation product-image hidden" 
+            />
+            </div>
           <button class="menu-button button-installation hidden-button">
             Close
           </button>
@@ -141,42 +140,42 @@
         <div class="drop-down-menu hidden" id="accessories">
           <div class="menu-cell">
             <img
-              src="images/safetyclimbs.png"
+              src="images/safetyclimbs-min.png"
               class="accessories product-image hidden"
             />
             <h3>Safety Climbs</h3>
           </div>
           <div class="menu-cell">
             <img
-              src="images/anti-climb.png"
+              src="images/anti-climb-min.png"
               class="accessories product-image hidden"
             />
             <h3>Anti-Climb Device</h3>
           </div>
           <div class="menu-cell">
             <img
-              src="images/icebridge.png"
+              src="images/icebridge-min.png"
               class="accessories product-image hidden"
             />
             <h3>Icebridge</h3>
           </div>
           <div class="menu-cell">
             <img
-              src="images/antennamounts.png"
+              src="images/antennamounts-min.png"
               class="accessories product-image hidden"
             />
             <h3>Antenna Mounts</h3>
           </div>
           <div class="menu-cell">
             <img
-              src="images/guyinghardware.png"
+              src="images/guyinghardware-min.png"
               class="accessories product-image hidden"
             />
             <h3>Guying Hardware</h3>
           </div>
           <div class="menu-cell">
             <img
-              src="images/insulators.png"
+              src="images/insulators-min.png"
               class="accessories product-image hidden"
             />
             <h3>Insulators</h3>
