fight commit - logo edit

--- a/public/products-services.html
+++ b/public/products-services.html
@@ -28,7 +28,7 @@
       <p>
         When you ask Magnum to design your tower, you can be confident in its
         quality. Every tower manufactured by Magnum is uniquely engineered for
-        our client's specification applications and needs.
+        our client's specific applications and needs.
       </p>
     </div>
     <div class="products-main">
