--- a/public/contact.html
+++ b/public/contact.html
@@ -50,7 +50,7 @@
       <input type="text" placeholder="Subject" maxlength="30" name="Subject" />
       <textarea id="message" placeholder="Message" name="Message"></textarea>
 
-      <button>Submit</button>
+      <button class="contact-button">Submit</button>
     </form>
   </body>
 </html>
