--- a/public/products-services.html
+++ b/public/products-services.html
@@ -11,6 +11,11 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <script
+      type="module"
+      defer
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
     <script defer src="./browser-app.js"></script>
   </head>
   <body class="products-body">
@@ -68,7 +73,7 @@
             (steel or magnesium) waveguide support brackets, and much more.
           </p>
           <button class="menu-button button-fabrication hidden-button">
-            Close
+            <ion-icon name="close-circle-outline"></ion-icon>
           </button>
         </div>
         <div class="drop-down-menu hidden" id="installation">
@@ -97,13 +102,9 @@
               <li>Standard and high intensity lighting systems</li>
             </ul>
             <div class="menu-cell">
-            <img
-              src="images/newtowerinstall-min.png"
-              class="installation product-image hidden" 
-            />
             </div>
           <button class="menu-button button-installation hidden-button">
-            Close
+            <ion-icon name="close-circle-outline"></ion-icon>
           </button>
         </div>
         <div class="drop-down-menu hidden" id="services">
@@ -134,7 +135,7 @@
             <li>Transmission lines</li>
           </ul>
           <button class="menu-button button-services hidden-button">
-            Close
+           <ion-icon name="close-circle-outline"></ion-icon>
           </button>
         </div>
         <div class="drop-down-menu hidden" id="accessories">
@@ -181,7 +182,7 @@
             <h3>Insulators</h3>
           </div>
           <button class="menu-button button-accessories hidden-button">
-            Close
+            <ion-icon name="close-circle-outline"></ion-icon>
           </button>
         </div>
     </div>
