--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             <ion-icon name="chevron-back-outline"></ion-icon>
           </button>
           <div class="slide">
-            <img src="images/redtower.png" />
+            <img src="images/redtower-min.png" />
           </div>
           <div class="slide">
             <img src="images/tower1-min.jpg" />
@@ -56,22 +56,22 @@
             <img src="images/newtowerinstall-min.png" />
           </div>
           <div class="slide">
-            <img src="images/fieldtower.png" />
+            <img src="images/fieldtower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/invertedtower.png" />
+            <img src="images/invertedtower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/laddertower.png" />
+            <img src="images/laddertower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/nighttower.png" />
+            <img src="images/nighttower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/redwhitetower.png" />
+            <img src="images/redwhitetower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/smalltower.png" />
+            <img src="images/smalltower-min.png" />
           </div>
           <button class="next slide-button">
             <ion-icon name="chevron-forward-outline"></ion-icon>
