--- a/public/history.html
+++ b/public/history.html
@@ -11,6 +11,27 @@
       rel="stylesheet"
     />
      <link rel = "icon" type = "image/x-icon" href = "images/favicon.ico">
+     <link rel = "stylesheet" href = "media1.css" media = "screen and (max-width: 1279px)"/>
+      <link
+      rel="stylesheet"
+      href="media2.css"
+      media="screen and (max-width: 992px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media3.css"
+      media="screen and (max-width: 768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media4.css"
+      media="screen and (max-width: 576px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media5.css"
+      media="screen and (max-width: 390px)"
+    />
     <script defer src="./browser-app.js"></script>
   </head>
   <body class="history-body">
@@ -40,7 +61,7 @@
         </footer>
       </div>
       <div class="panel about">
-        <img src="images/history-img-min.png" />
+        <img loading = "lazy" src="images/history-img-min.png" />
         <div class="text" id ="founded">
           <h2>About Magnum Towers</h2>
           <h3>Founded in 1976</h3>
@@ -100,7 +121,7 @@
             in 2005.
           </p>
         </div>
-        <img src="images/tower1-min.jpg" />
+        <img loading = "lazy" src="images/tower1-min.jpg" />
         <div class="text" id ="reputation">
           <h3>A Solid Reputation</h3>
           <p>
