--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,31 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.4.1/axios.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="media1.css"
+      media="screen and (max-width: 1279px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media2.css"
+      media="screen and (max-width: 992px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media3.css"
+      media="screen and (max-width: 768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media4.css"
+      media="screen and (max-width: 576px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media5.css"
+      media="screen and (max-width: 390px)"
+    />
     <script defer src="./browser-app.js"></script>
     <title>Magnum Towers</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
@@ -30,7 +55,9 @@
     </header>
     <div class="main">
       <div class="welcome">
-        <h1><img src="images/magnum-logo-min.png" /> Magnum Towers</h1>
+        <h1>
+          <img loading="lazy" src="images/magnum-logo-min.png" /> Magnum Towers
+        </h1>
         <p>
           Since 1976 Magnum Towers has manufactured strong, dependable towers
           that have a proven track record of reliability. Magnum provides
@@ -44,34 +71,34 @@
             <ion-icon name="chevron-back-outline"></ion-icon>
           </button>
           <div class="slide">
-            <img src="images/redtower-min.png" />
+            <img loading="lazy" src="images/redtower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/tower1-min.jpg" />
+            <img loading="lazy" src="images/tower1-min.jpg" />
           </div>
           <div class="slide">
-            <img src="images/installation-min.png" />
+            <img loading="lazy" src="images/installation-min.png" />
           </div>
           <div class="slide">
-            <img src="images/newtowerinstall-min.png" />
+            <img loading="lazy" src="images/newtowerinstall-min.png" />
           </div>
           <div class="slide">
-            <img src="images/fieldtower-min.png" />
+            <img loading="lazy" src="images/fieldtower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/invertedtower-min.png" />
+            <img loading="lazy" src="images/invertedtower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/laddertower-min.png" />
+            <img loading="lazy" src="images/laddertower-min.png" />
           </div>
           <div class="slide">
             <img src="images/nighttower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/redwhitetower-min.png" />
+            <img loading="lazy" src="images/redwhitetower-min.png" />
           </div>
           <div class="slide">
-            <img src="images/smalltower-min.png" />
+            <img loading="lazy" src="images/smalltower-min.png" />
           </div>
           <button class="next slide-button">
             <ion-icon name="chevron-forward-outline"></ion-icon>
