--- a/public/products-services.html
+++ b/public/products-services.html
@@ -16,6 +16,27 @@
       defer
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
+    <link rel = "stylesheet" href = "media1.css" media = "screen and (max-width: 1279px)"/>
+     <link
+      rel="stylesheet"
+      href="media2.css"
+      media="screen and (max-width: 992px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media3.css"
+      media="screen and (max-width: 768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media4.css"
+      media="screen and (max-width: 576px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media5.css"
+      media="screen and (max-width: 390px)"
+    />
     <script defer src="./browser-app.js"></script>
   </head>
   <body class="products-body">
@@ -28,7 +49,7 @@
       </nav>
     </header>
     <div class="welcome">
-      <h1><img src="images/magnum-logo-min.png" /> Magnum Towers</h1>
+      <h1><img loading = "lazy" src="images/magnum-logo-min.png" /> Magnum Towers</h1>
       <h2>From Design to Installation</h2>
       <p>
         When you ask Magnum to design your tower, you can be confident in its
@@ -39,19 +60,19 @@
     <div class="products-main">
       <div class="products-row one">
         <div class="products-card">
-          <img src="images/welding-min.png" />
+          <img loading = "lazy" src="images/welding-min.png" />
           <a class="drop-down-link" dataset="fabrication">Fabrication</a>
         </div>
         <div class="products-card">
-          <img src="images/installation-min.png" />
+          <img loading = "lazy" src="images/installation-min.png" />
           <a class="drop-down-link" dataset="installation">Installation</a>
         </div>
         <div class="products-card">
-          <img src="images/services-min.png" />
+          <img loading = "lazy" src="images/services-min.png" />
           <a class="drop-down-link" dataset="services">Services</a>
         </div>
         <div class="products-card">
-          <img src="images/accessories-min.png" />
+          <img laoding = "lazy" src="images/accessories-min.png" />
           <a class="drop-down-link" dataset="accessories">Accessories</a>
         </div>
       </div>
@@ -140,42 +161,42 @@
         </div>
         <div class="drop-down-menu hidden" id="accessories">
           <div class="menu-cell">
-            <img
+            <img loading = "lazy"
               src="images/safetyclimbs-min.png"
               class="accessories product-image hidden"
             />
             <h3>Safety Climbs</h3>
           </div>
           <div class="menu-cell">
-            <img
+            <img loading = "lazy"
               src="images/anti-climb-min.png"
               class="accessories product-image hidden"
             />
             <h3>Anti-Climb Device</h3>
           </div>
           <div class="menu-cell">
-            <img
+            <img loading = "lazy"
               src="images/icebridge-min.png"
               class="accessories product-image hidden"
             />
             <h3>Icebridge</h3>
           </div>
           <div class="menu-cell">
-            <img
+            <img loading = "lazy"
               src="images/antennamounts-min.png"
               class="accessories product-image hidden"
             />
             <h3>Antenna Mounts</h3>
           </div>
           <div class="menu-cell">
-            <img
+            <img loading = "lazy"
               src="images/guyinghardware-min.png"
               class="accessories product-image hidden"
             />
             <h3>Guying Hardware</h3>
           </div>
           <div class="menu-cell">
-            <img
+            <img loading = "lazy"
               src="images/insulators-min.png"
               class="accessories product-image hidden"
             />
