--- a/public/warranty.html
+++ b/public/warranty.html
@@ -10,6 +10,31 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="media1.css"
+      media="screen and (max-width: 1279px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media2.css"
+      media="screen and (max-width: 992px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media3.css"
+      media="screen and (max-width: 768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media4.css"
+      media="screen and (max-width: 576px)"
+    />
+    <link
+      rel="stylesheet"
+      href="media5.css"
+      media="screen and (max-width: 390px)"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.4.1/axios.min.js"></script>
     <script defer src="./browser-app.js"></script>
     <title>Magnum Warranty</title>
