--- a/public/products-services.html
+++ b/public/products-services.html
@@ -72,7 +72,7 @@
           <a class="drop-down-link" dataset="services">Services</a>
         </div>
         <div class="products-card">
-          <img laoding = "lazy" src="images/accessories-min.png" />
+          <img loading = "lazy" src="images/accessories-min.png" />
           <a class="drop-down-link" dataset="accessories">Accessories</a>
         </div>
       </div>
