--- a/public/history.html
+++ b/public/history.html
@@ -5,33 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Magnum Tower's History</title>
+    <link rel="preload" href="images/hero-image-min-min.jpg" as="image" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&family=Paytone+One&family=Playfair+Display:ital@1&family=Poppins&display=swap"
       rel="stylesheet"
     />
      <link rel = "icon" type = "image/x-icon" href = "images/favicon.ico">
-     <link rel = "stylesheet" href = "media1.css" media = "screen and (max-width: 1279px)"/>
-      <link
-      rel="stylesheet"
-      href="media2.css"
-      media="screen and (max-width: 992px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media3.css"
-      media="screen and (max-width: 768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media4.css"
-      media="screen and (max-width: 576px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media5.css"
-      media="screen and (max-width: 390px)"
-    />
+   
     <script defer src="./browser-app.js"></script>
   </head>
   <body class="history-body">
