--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preload" href="images/hero-image-min-min.jpg" as="image" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&family=Paytone+One&family=Playfair+Display:ital@1&family=Poppins&display=swap"
@@ -15,31 +16,7 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.4.1/axios.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="media1.css"
-      media="screen and (max-width: 1279px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media2.css"
-      media="screen and (max-width: 992px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media3.css"
-      media="screen and (max-width: 768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media4.css"
-      media="screen and (max-width: 576px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media5.css"
-      media="screen and (max-width: 390px)"
-    />
+
     <script defer src="./browser-app.js"></script>
     <title>Magnum Towers</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
@@ -72,6 +49,7 @@
           </button>
           <div class="slide">
             <img loading="lazy" src="images/redtower-min.png" />
+            <!-- <h1 class="slider-label">Red Tower</h1> -->
           </div>
           <div class="slide">
             <img loading="lazy" src="images/tower1-min.jpg" />
