--- a/public/products-services.html
+++ b/public/products-services.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products & Services</title>
+    <link rel="preload" href="images/hero-image-min-min.jpg" as="image" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&family=Paytone+One&family=Playfair+Display:ital@1&family=Poppins&display=swap"
@@ -16,27 +17,7 @@
       defer
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
-    <link rel = "stylesheet" href = "media1.css" media = "screen and (max-width: 1279px)"/>
-     <link
-      rel="stylesheet"
-      href="media2.css"
-      media="screen and (max-width: 992px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media3.css"
-      media="screen and (max-width: 768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media4.css"
-      media="screen and (max-width: 576px)"
-    />
-    <link
-      rel="stylesheet"
-      href="media5.css"
-      media="screen and (max-width: 390px)"
-    />
+   
     <script defer src="./browser-app.js"></script>
   </head>
   <body class="products-body">
@@ -72,7 +53,7 @@
           <a class="drop-down-link" dataset="services">Services</a>
         </div>
         <div class="products-card">
-          <img laoding = "lazy" src="images/accessories-min.png" />
+          <img loading = "lazy" src="images/accessories-min.png" />
           <a class="drop-down-link" dataset="accessories">Accessories</a>
         </div>
       </div>
