drop-down position absolute

--- a/public/products-services.html
+++ b/public/products-services.html
@@ -102,10 +102,13 @@
               <li>Antenna and dish installations</li>
               <li>Ice Shields</li>
               <li>Standard and high intensity lighting systems</li>
-            </ul>
-          <button class="menu-button button-installation hidden-button">
+               <button class="menu-button button-installation hidden-button">
             <ion-icon name="close-circle-outline"></ion-icon>
           </button>
+            </ul>
+          <!-- <button class="menu-button button-installation hidden-button">
+            <ion-icon name="close-circle-outline"></ion-icon>
+          </button> -->
         </div>
         <div class="drop-down-menu hidden" id="services">
           <p class="product-paragraph">
@@ -133,10 +136,13 @@
             <li>Tower removal and demolition</li>
             <li>Grounding and tower bonding</li>
             <li>Transmission lines</li>
-          </ul>
-          <button class="menu-button button-services hidden-button">
+            <button class="menu-button button-services hidden-button">
            <ion-icon name="close-circle-outline"></ion-icon>
           </button>
+          </ul>
+          <!-- <button class="menu-button button-services hidden-button">
+           <ion-icon name="close-circle-outline"></ion-icon>
+          </button> -->
         </div>
         <div class="drop-down-menu hidden" id="accessories">
           <div class="menu-cell">
